--- a/style.css
+++ b/style.css
@@ -2,40 +2,67 @@
 @import "var.css";
 
 body {
-  background-color: #00d2d3;
-  color: white;
-  font-size: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: black;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    color: white;
 }
 
 .js-clock {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 .js-time {
-  font-size: 50px;
+  font-size: 80px;
   font-weight: 600;
-  color: blueviolet;
+}
+
+form{
+  width: 30%;
+  margin: 20px 0px;
 }
 
 form > input {
   outline: none;
   border: none;
-  width: 30%;
+  width: 100%;
   height: 50px;
-  background-color: rgba(0, 0, 0, 0.05);
-  border-bottom: 2px solid var(--main-color);
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 40px;
+  padding: 5px 0px;
   transition: all 0.5s ease-in-out;
+  text-align: center;
+  color: white;
+  font-size: 20px;
 }
 
 form > input:focus {
-  border-color: steelblue;
-  background-color: turquoise;
+  border-color: yellow;
 }
 
 input::placeholder {
   font-size: 15px;
+  text-align: center;
+  color: white;
+}
+
+.weather-info{
+  font-size: 20px;
+  margin-top: 20px;
+  font-weight: 600;
+  border-bottom: 3px solid white;
+  padding: 20px 20px;
+}
+
+.js-weather{
+  margin-top: 30px;
+  font-size: 25px;
+  font-weight: 600;
 }
 
 .form,
@@ -45,6 +72,34 @@ input::placeholder {
 
 .showing {
   display: block;
+}
+
+.js-greetings{
+  font-size: 30px;
+  margin: 20px 0px;
+  color: white;
+  font-weight: 600;
+}
+
+li{
+  font-size: 30px;
+  color: white;
+  margin: 10px 0px;
+}
+
+li span{
+  margin-left: 30px;
+  font-weight: 600 ;
+}
+
+li button{
+  width: 50px;
+  height: 50px;
+  background-color: tomato;
+  border: none;
+  border-radius: 20px;
+  color: white;
+  font-size: 20px;
 }
 
 .bgPicture {
